players added by ret key, players persisted between views

--- a/app/views/newgame.html
+++ b/app/views/newgame.html
@@ -1,8 +1,8 @@
 
 
 <div class="col-lg-4">
-     <button class="btn btn-info" ng-click="newplayer=!newplayer">Add New Player</button>
-    <input type="text" ng-show="newplayer" placeholder="Enter the name of the new player" class="form-control">
+     <button class="btn btn-info" ng-click="addPlayer(newplayer)">Add New Player</button>
+    <input type="text" ng-model="newplayer" placeholder="Enter the name of the new player" class="form-control">
 </div>
 
 <div class="col-lg-4">
