--- a/app/views/main.html
+++ b/app/views/main.html
@@ -2,5 +2,5 @@
   <h1>Shoot The Monkeys</h1>
   <h3>A Makey Makey Game</h3>
 
-  <h3><a href="#/newgame" class="btn btn-warning btn-lg">Ready Player One?</a></h3>
+  <h3><a href="#/newgame" class="btn btn-warning btn-lg">New Game</a></h3>
 </div>
