--- a/app/views/play.html
+++ b/app/views/play.html
@@ -1,7 +1,37 @@
-<div class="hero-unit">
-  <h1>Shoot The Monkeys</h1>
-  <h3>A Makey Makey Game</h3>
+<style>
 
+    .header{
+        margin-top:  60px;
+        margin-bottom: 60px;
+        color: rgb(166, 198, 255);
+        background-color: rgb(52, 85, 136);
+        padding-left:  45px;
+
+    }
+
+    .title{
+        font-size:  30px;
+
+    }
+
+</style>
+
+<div class="hero-unit">
+    <h1>Shoot The Monkeys</h1>
+    <h3>A Makey Makey Game</h3>
+
+<div class="header">
+
+    <div class="row">
+        <span class="title col-lg-6">Round:</span>
+    </div>
+    <div class="row">
+        <span class="title col-lg-6">Player:</span>
+    </div>
+    <div class="row">
+        <span class="title col-lg-6">Score:</span>
+    </div>
+</div>
   <ul class="list-inline">
       <li ng-repeat="monkey in monkeys" class="monkey" ng-class="{enabled: monkey.state, disabled: !monkey.state}"></li>
   </ul>
