--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,4 +1,24 @@
 /* Will be compiled down to a single stylesheet with your sass files */
+
+body{
+    background-color: rgb(237, 156, 40);
+}
+
+.hero-unit h1{
+    background-color:  white;
+    text-align:  center;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    font-size: 4em;
+}
+
+.hero-unit h3{
+    background-color:  yellow;
+    text-align:  center;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    font-size: 2em;
+}
 .monkey {
 	width: 270px;
 	height: 270px;
@@ -10,3 +30,4 @@
 .monkey.disabled {
 	background: url('../img/monkey4.jpg') no-repeat;
 }
+
